In the WebKit 3d transformations in CSS, move the results list up on the z-axis by 1px to avoid tooltip and popover cutoffs.

--- a/metacatui/src/main/webapp/css/metacatui-common.css
+++ b/metacatui/src/main/webapp/css/metacatui-common.css
@@ -194,6 +194,9 @@ h3{
 .result-row .label{
 	margin-right: 3px;
 }
+.result-row .tooltip{
+	z-index: 99999;
+}
 /****************************************** 
 ** Provenance flow-charts ***
 ******************************************/
