--- a/metacatui/src/main/webapp/js/themes/dataone/css/metacatui.css
+++ b/metacatui/src/main/webapp/js/themes/dataone/css/metacatui.css
@@ -1001,7 +1001,7 @@ table th.btn-container .btn{
 		border-right: 1px solid #CCC;
 		overflow-x: hidden;
 		overflow-y: overlay;
-		-webkit-transform: translate3d(0,0,0); 
+		-webkit-transform: translate3d(0,0,0);
     }
     
     .subset-choice{
@@ -1414,7 +1414,7 @@ table th.btn-container .btn{
 		width: 400px;
 		overflow-x: hidden;
 		overflow-y: scroll;
-		-webkit-transform: translate3d(0,0,0); 
+		-webkit-transform: translate3d(0,0,1); 
 		height: 700px;
 		margin-left: 0px;
 	}
